--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,8 @@ android {
         versionName "1.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
+        manifestPlaceholders = [auth0Domain: "dev-ulxwc1q3.eu.auth0.com", auth0Scheme: "${applicationId}"]
+
         if (isNewArchitectureEnabled()) {
             // We configure the NDK build only if you decide to opt-in for the New Architecture.
             externalNativeBuild {
