--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-auth0": "^2.13.2"
+    "react-native-auth0": "^2.13.2",
+    "react-native-device-info": "^9.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
