--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-auth0": "^2.13.2",
-    "react-native-device-info": "^9.0.2"
+    "react-native-device-info": "^9.0.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
