--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@types/react-native-dotenv": "^0.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-auth0": "^2.13.2",
     "react-native-device-info": "^9.0.2",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-paper": "^4.12.2",
+    "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0"
+    "react-native-screens": "^3.15.0",
+    "react-native-sensitive-info": "^5.5.8"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
@@ -27,6 +33,9 @@
     "eslint": "7.32.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.67.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
+    "react-native-clean-project": "^4.0.1",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
