--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@types/react-native-dotenv": "^0.2.0",
@@ -19,7 +20,9 @@
     "react-native-auth0": "^2.13.2",
     "react-native-device-info": "^9.0.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-paper": "^4.12.2",
+    "react-native-reanimated": "^2.9.1",
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
