--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@types/react-native-dotenv": "^0.2.0",
+    "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
@@ -26,7 +27,8 @@
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-sensitive-info": "^5.5.8"
+    "react-native-sensitive-info": "^5.5.8",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
@@ -48,5 +50,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "proxy": "http://192.168.0.21:4000/"
 }
