--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.7.0",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "mongoose-int32": "^0.6.0",
+    "mongoose-long": "^0.5.1",
+    "socket.io": "^4.5.1"
   },
-  "description": ""
+  "description": "",
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.9"
+  }
 }
