--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.27.2",
+    "deprecated-react-native-prop-types": "^2.3.0",
+    "emoji-utils": "^1.0.1",
     "jwt-decode": "^3.1.2",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-auth0": "^2.13.2",
     "react-native-device-info": "^9.0.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-paper": "^4.12.2",
     "react-native-reanimated": "^2.9.1",
     "react-native-restart": "^0.0.22",
