--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.1",
     "deprecated-react-native-prop-types": "^2.3.0",
     "emoji-utils": "^1.0.1",
+    "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^6.7.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
