--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "jest": {
     "preset": "react-native"
   },
-  "main": "index.js",
+  "main": "server.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
