--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.7.3",
+    "node": "^19.1.0",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
