--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-sensitive-info": "^5.5.8",
+    "react-native-vector-icons": "^9.2.0",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
