--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-auth0": "^2.13.2",
     "react-native-device-info": "^9.0.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-paper": "^4.12.2",
