--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/drawer": "^6.4.3",
+    "@react-navigation/elements": "^1.3.14",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@types/react-native-dotenv": "^0.2.0",
@@ -39,6 +40,7 @@
     "react-native-screens": "^3.15.0",
     "react-native-sensitive-info": "^5.5.8",
     "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
