--- a/package.json
+++ b/package.json
@@ -41,20 +41,26 @@
     "react-native-sensitive-info": "^5.5.8",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "ts-jest": "^29.0.5"
   },
   "devDependencies": {
-    "@babel/core": "7.18.5",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "7.18.3",
     "@react-native-community/eslint-config": "2.0.0",
-    "babel-jest": "26.6.3",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.0.0-rc.2",
+    "babel-jest": "^26.6.3",
     "eslint": "7.32.0",
-    "jest": "26.6.3",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.67.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react-native-clean-project": "^4.0.1",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "^17.0.2"
   },
   "jest": {
     "preset": "react-native"
