--- a/package.json
+++ b/package.json
@@ -49,13 +49,15 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
     "@babel/runtime": "7.18.3",
     "@react-native-community/eslint-config": "2.0.0",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.0.0-rc.2",
     "babel-jest": "^26.6.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "7.32.0",
-    "jest": "^26.6.3",
+    "jest": "^29.5.0",
     "metro-react-native-babel-preset": "0.67.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
@@ -63,7 +65,8 @@
     "react-test-renderer": "^17.0.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"]
   },
   "main": "server.js",
   "keywords": [],
