--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/elements": "^1.3.14",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.27.2",
     "body-parser": "^1.20.1",
@@ -34,13 +36,17 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-paper": "^4.12.2",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-restart": "^0.0.22",
+    "react-native-root-siblings": "^4.1.1",
+    "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-sensitive-info": "^5.5.8",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
+    "react-usestateref": "^1.0.8",
     "socket.io-client": "^4.5.1",
     "ts-jest": "^29.0.5"
   },
@@ -66,7 +72,9 @@
   },
   "jest": {
     "preset": "react-native",
-    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"]
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
   },
   "main": "server.js",
   "keywords": [],
