--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.27.2",
+    "babel-plugin-module-resolver": "^5.0.0",
     "body-parser": "^1.20.1",
     "deprecated-react-native-prop-types": "^2.3.0",
     "emoji-utils": "^1.0.1",
